--- a/prueba.css
+++ b/prueba.css
@@ -50,7 +50,24 @@ body{
     font-family: 'sans-serif';font-size: 20px;
     font-weight: bold;
     text-align: center;
-    margin-left:-351px;
+    margin-left:-352px;
     margin-top: 60px;
     cursor:pointer;
+}
+
+#score{
+    margin-left: 0px;
+    margin-top:0px;
+    padding: 5px;
+    font-family: Helvetica, sans-serif, Arial;
+    font-size: 15px;
+    font-weight: bold;
+    color:white;
+}
+#record{
+    padding: 5px;
+    font-family: Helvetica, sans-serif, Arial;
+    font-size: 15px;
+    font-weight: bold;
+    color:white;
 }
